syntax = "proto3";

package starknet.event;

import "common.proto";

message Event {
    starknet.common.Hash transaction_hash = 1;
    starknet.common.Felt252  from_address = 2;
    repeated starknet.common.Felt252 keys = 3;
    repeated starknet.common.Felt252 data = 4;
}

message EventsRequest {
    starknet.common.Iteration iteration = 1;
}

message Events {
    repeated Event items = 1;
}

// can be several in a single reply
message EventsResponse {
    optional starknet.common.BlockID id = 1; // may not appear if Fin is sent to end the whole response

    oneof responses {
        Events              events = 2;
        starknet.common.Fin fin    = 3;
    }
}
